[metadata]
name = pyed
version = attr: pyed.__version__
description = "Python Yed Simple Graph generator"
long_description = file: pypi.md
long_description_content_type = text/markdown
url = https://github.com/ccossou/Pyed
author = "Christophe Cossou"
author_email = "ccossou@gmail.com"
platforms = ["Linux", "Mac OS X"]
license_files = LICENSE.txt

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    pytest
    setuptools